--- a/index.html
+++ b/index.html
@@ -27,220 +27,223 @@
           11 mai 2016, Alexandre Gorius
         </cite>
         <p>
-          Dans la nature, <span class="bien">bien</span> &
+          “Dans la nature, <span class="bien">bien</span> &
           <span class="mal">mal</span> n’existent pas. L'Univers lui-même n'est
-          ni bon ni mauvais, mais un potentiel en développement permanent.
+          ni bon ni mauvais, mais un potentiel en développement permanent“.
         </p>
       </blockquote>
     </header>
-
-    <h2>Dans la vie, il y a 4 types de personnes.</h2>
-    <ul>
-      <li>
-        les gens qui pensent qu'Internet c'est <span class="bien">bien</span>,
-      </li>
-      <li>
-        les gens qui pensent qu'Internet c'est le <span class="mal">mal</span>,
-      </li>
-      <li>les gens qui pensent qu'Internet ce sont des chats,</li>
-      <li>les gens qui n'y pensent pas.</li>
-    </ul>
-    <img
-      id="img-eau"
-      src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
-      alt="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
-      title="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
-    />
-    <p id="firstp" class="sec1">
-      Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes.
-      Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est
-      comme cela doit être.
-    </p>
-    <p class="sec1">
-      Ici bas, la seule réalité qui soit est celle de notre conscience. Rien
-      n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos
-      sens ne transmettent pas le message. Cela signifie que si nous sentons
-      <span class="mal">mal</span>
-      quelque chose, notre réalité change. C’est chose possible car notre
-      perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si
-      nous pensons nos sensations d’une manière ou d’une autre, alors notre
-      réalité change aussi en fonction de la manière. Ainsi, si nous pouvons
-      autant changer notre réalité, alors rien n’est tangible.
-    </p>
-    <p class="sec1">
-      Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une
-      vision quasi divine de cette personne. Sortez de son emprise, cette
-      personne se révèle différente. Pourtant elle n’a pas changé, seulement
-      vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce
-      n’est pas seulement que vous pouvez activement façonner votre monde de
-      cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
-    </p>
-    <figure id="rocher">
+    <article>
+      <h2>Dans la vie, il y a 4 types de personnes.</h2>
+      <ul>
+        <li>
+          les gens qui pensent qu'Internet c'est <span class="bien">bien</span>,
+        </li>
+        <li>
+          les gens qui pensent qu'Internet c'est le
+          <span class="mal">mal</span>,
+        </li>
+        <li>les gens qui pensent qu'Internet ce sont des chats,</li>
+        <li>les gens qui n'y pensent pas.</li>
+      </ul>
       <img
-        src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
-        alt="élément flou entouré sur un sol terreux"
-        title="élément flou entouré sur un sol terreux"
+        id="img-eau"
+        src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
+        alt="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
+        title="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
       />
-      <figcaption>
-        qu'en pense-t-il?
-      </figcaption>
-    </figure>
-    <blockquote>
-      <p>
-        Le rocher sur Mars ne fait pas la différence entre
-        <span class="bien">bien</span> et <span class="mal">mal</span>, car pour
-        lui, ni l’un ni l’autre n’existent.
+      <p id="firstp" class="sec1">
+        Du point de vue de ce rocher sur Mars, rien ne se soucie de vos
+        problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème",
+        tout est comme cela doit être.
       </p>
-    </blockquote>
-    <p>
-      Tout est relatif à un point de vue. Ainsi, il n’existe pas de
-      <span class="bien">bien</span> ni de <span class="mal">mal</span>, car
-      <span class="bien">bien</span> et <span class="mal">mal</span> sont des
-      valeurs absolues. Si quelque chose est bon d’après quelqu’un et
-      <span class="mal">mal</span> d’après quelqu’un d’autre, alors cette chose
-      n’est en elle-même ni bonne, ni <span class="mal">mal</span>.
-      Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation
-      entre <span class="bien">bien</span> et <span class="mal">mal</span>, les
-      deux n’existent jute pas.
-    </p>
-    <h2>
-      “Est-ce un <span class="bien">bien</span>? Est-ce un
-      <span class="mal">mal</span>? Je ne sais pas.”
-    </h2>
-    <p>Une histoire chinoise célèbre illustre parfaitement ce propos.</p>
-
-    <figure>
-      <img
-        src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg "
-        alt="Un vieux fermier chinois assis par terre dans un habitat en bois"
-        title="Un vieux fermier chinois assis par terre dans un habitat en bois"
-      />
-      <figcaption>
-        Le vieux fermier chinois
-      </figcaption>
-    </figure>
-    <p>
-      C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval
-      s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui
-      remonter le moral.
-    </p>
-    <blockquote class="villageois">
-      <p>
-        “Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour
-        cette perte, c’est si triste !”
+      <p class="sec1">
+        Ici bas, la seule réalité qui soit est celle de notre conscience. Rien
+        n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos
+        sens ne transmettent pas le message. Cela signifie que si nous sentons
+        <span class="mal">mal</span>
+        quelque chose, notre réalité change. C’est chose possible car notre
+        perception est limitée: on ne peut pas voir à 360 degrés par exemple. Si
+        nous pensons nos sensations d’une manière ou d’une autre, alors notre
+        réalité change aussi en fonction de la manière. Ainsi, si nous pouvons
+        autant changer notre réalité, alors rien n’est tangible.
       </p>
-    </blockquote>
-    <blockquote class="fermier">
-      <cite>
-        Le fermier répond,
-      </cite>
+      <p class="sec1">
+        Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez
+        une vision quasi divine de cette personne. Sortez de son emprise, cette
+        personne se révèle différente. Pourtant elle n’a pas changé, seulement
+        vous avez changé d’état d’esprit. Tout fonctionne de cette manière : ce
+        n’est pas seulement que vous pouvez activement façonner votre monde de
+        cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
+      </p>
+      <figure id="rocher">
+        <img
+          src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
+          alt="élément flou entouré sur un sol terreux"
+          title="élément flou entouré sur un sol terreux"
+        />
+        <figcaption>
+          qu'en pense-t-il?
+        </figcaption>
+      </figure>
+      <blockquote>
+        <p>
+          “Le rocher sur Mars ne fait pas la différence entre
+          <span class="bien">bien</span> et <span class="mal">mal</span>, car
+          pour lui, ni l’un ni l’autre n’existent“.
+        </p>
+      </blockquote>
       <p>
+        Tout est relatif à un point de vue. Ainsi, il n’existe pas de
+        <span class="bien">bien</span> ni de <span class="mal">mal</span>, car
+        <span class="bien">bien</span> et <span class="mal">mal</span> sont des
+        valeurs absolues. Si quelque chose est bon d’après quelqu’un et
+        <span class="mal">mal</span> d’après quelqu’un d’autre, alors cette
+        chose n’est en elle-même ni bonne, ni <span class="mal">mal</span>.
+        Rappelez-vous : d’après ce rocher sur Mars, il n’y a pas de séparation
+        entre <span class="bien">bien</span> et <span class="mal">mal</span>,
+        les deux n’existent jute pas.
+      </p>
+      <h2>
         “Est-ce un <span class="bien">bien</span>? Est-ce un
-        <span class="mal">mal</span>? Je ne sais pas.”.
-      </p>
-    </blockquote>
+        <span class="mal">mal</span>? Je ne sais pas.”
+      </h2>
+      <p>Une histoire chinoise célèbre illustre parfaitement ce propos.</p>
 
-    <p>
-      Le jour suivant, le cheval revient avec sept magnifiques juments. Les
-      villageois reviennent pour célébrer la bonne nouvelle.
-    </p>
-    <blockquote class="villageois">
+      <figure>
+        <img
+          src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg "
+          alt="Un vieux fermier chinois assis par terre dans un habitat en bois"
+          title="Un vieux fermier chinois assis par terre dans un habitat en bois"
+        />
+        <figcaption>
+          Le vieux fermier chinois
+        </figcaption>
+      </figure>
       <p>
-        “Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu
-        dois être ravis de cette nouvelle !”
+        C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval
+        s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui
+        remonter le moral.
       </p>
-    </blockquote>
+      <blockquote class="villageois">
+        <p>
+          “Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour
+          cette perte, c’est si triste !”
+        </p>
+      </blockquote>
+      <blockquote class="fermier">
+        <cite>
+          Le fermier répond,
+        </cite>
+        <p>
+          “Est-ce un <span class="bien">bien</span>? Est-ce un
+          <span class="mal">mal</span>? Je ne sais pas.”.
+        </p>
+      </blockquote>
 
-    <blockquote class="fermier">
-      <cite>
-        Le fermier répond,
-      </cite>
       <p>
-        “Est-ce un <span class="bien">bien</span>? Est-ce un
-        <span class="mal">mal</span>? Je ne sais pas.”.
+        Le jour suivant, le cheval revient avec sept magnifiques juments. Les
+        villageois reviennent pour célébrer la bonne nouvelle.
       </p>
-    </blockquote>
-    <p>
-      Le jour d’après, le fils du fermier s’occupe de l’entraînement des
-      nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon
-      tombe et se casse la jambe. Les villageois reviennent.
-    </p>
-    <blockquote class="villageois">
+      <blockquote class="villageois">
+        <p>
+          “Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche !
+          Tu dois être ravis de cette nouvelle !”
+        </p>
+      </blockquote>
+
+      <blockquote class="fermier">
+        <cite>
+          Le fermier répond,
+        </cite>
+        <p>
+          “Est-ce un <span class="bien">bien</span>? Est-ce un
+          <span class="mal">mal</span>? Je ne sais pas.”.
+        </p>
+      </blockquote>
       <p>
-        “Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous
-        espérons qu’il s’en remettra bientôt, c’est tellement dommage…”
+        Le jour d’après, le fils du fermier s’occupe de l’entraînement des
+        nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon
+        tombe et se casse la jambe. Les villageois reviennent.
       </p>
-    </blockquote>
+      <blockquote class="villageois">
+        <p>
+          “Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous
+          espérons qu’il s’en remettra bientôt, c’est tellement dommage…”
+        </p>
+      </blockquote>
 
-    <blockquote class="fermier">
-      <cite>
-        Le fermier répond,
-      </cite>
+      <blockquote class="fermier">
+        <cite>
+          Le fermier répond,
+        </cite>
+        <p>
+          “Est-ce un <span class="bien">bien</span>? Est-ce un
+          <span class="mal">mal</span>? Je ne sais pas.”.
+        </p>
+      </blockquote>
       <p>
-        “Est-ce un <span class="bien">bien</span>? Est-ce un
-        <span class="mal">mal</span>? Je ne sais pas.”.
+        Le quatrième jour, l’armée arrive au village à la recherche de nouvelles
+        jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au
+        recrutement.
       </p>
-    </blockquote>
-    <p>
-      Le quatrième jour, l’armée arrive au village à la recherche de nouvelles
-      jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au
-      recrutement.
-    </p>
-    <blockquote class="villageois">
+      <blockquote class="villageois">
+        <p>
+          “Quelle nouvelle incroyable ! Ton fils échappera à cette guerre
+          sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux,
+          c’est fantastique !”
+        </p>
+      </blockquote>
+
+      <blockquote class="fermier">
+        <cite>
+          Quand <span class="bien">bien</span> même, le fermier répond,
+        </cite>
+        <p>
+          “Est-ce un <span class="bien">bien</span>? Est-ce un
+          <span class="mal">mal</span>? Je ne sais pas.”.
+        </p>
+      </blockquote>
+
+      <hr />
+      <p>En résumé, représentons ce dialogue sous forme de tableau</p>
+
+      <table>
+        <caption>
+          Tableau représentant la philosophie du fermier.
+        </caption>
+        <tr>
+          <th>Evénement</th>
+          <th>
+            <span class="bien">bien</span> ou <span class="mal">mal</span> ?
+          </th>
+        </tr>
+        <tr>
+          <td>Perdre son cheval</td>
+          <td>Cela dépend</td>
+        </tr>
+        <tr>
+          <td>Gagner 7 chevaux</td>
+          <td>Cela dépend</td>
+        </tr>
+        <tr>
+          <td>Le fils se blesse</td>
+          <td>Cela dépend</td>
+        </tr>
+        <tr>
+          <td>Evite la guerre</td>
+          <td>Cela dépend</td>
+        </tr>
+      </table>
+
+      <h3>Conclusion</h3>
       <p>
-        “Quelle nouvelle incroyable ! Ton fils échappera à cette guerre
-        sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est
-        fantastique !”
+        Le <span class="bien">bien</span> et le Mal sont des valeurs culturelles
+        et non naturelles. La banane est bonne pour le singe, le singe n'est pas
+        bon pour la banane. N'en faisons donc pas un fromage...
       </p>
-    </blockquote>
+    </article>
 
-    <blockquote class="fermier">
-      <cite>
-        Quand <span class="bien">bien</span> même, le fermier répond,
-      </cite>
-      <p>
-        “Est-ce un <span class="bien">bien</span>? Est-ce un
-        <span class="mal">mal</span>? Je ne sais pas.”.
-      </p>
-    </blockquote>
-
-    <hr />
-    <p>En résumé, représentons ce dialogue sous forme de tableau</p>
-
-    <table>
-      <caption>
-        Tableau représentant la philosophie du fermier.
-      </caption>
-      <tr>
-        <th>Evénement</th>
-        <th>
-          <span class="bien">bien</span> ou <span class="mal">mal</span> ?
-        </th>
-      </tr>
-      <tr>
-        <td>Perdre son cheval</td>
-        <td>Cela dépend</td>
-      </tr>
-      <tr>
-        <td>Gagner 7 chevaux</td>
-        <td>Cela dépend</td>
-      </tr>
-      <tr>
-        <td>Le fils se blesse</td>
-        <td>Cela dépend</td>
-      </tr>
-      <tr>
-        <td>Evite la guerre</td>
-        <td>Cela dépend</td>
-      </tr>
-    </table>
-
-    <h3>Conclusion</h3>
-    <p>
-      Le <span class="bien">bien</span> et le Mal sont des valeurs culturelles
-      et non naturelles. La banane est bonne pour le singe, le singe n'est pas
-      bon pour la banane. N'en faisons donc pas un fromage...
-    </p>
     <footer>
       <p>Copyright Just Another Company 2017.</p>
       <p>Tous droits réservés.</p>
@@ -277,6 +280,7 @@
       <ul>
         <li>
           <a
+            target="_blank"
             href="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
             >Bonus 1</a
           >
